Dashboard and Add Protocol initial code

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './assets/styles/counter.scss';
 @import './assets/styles/dashboard.scss';
+@import './assets/styles/addprotocol.scss';
 .App {
   text-align: center;
 }
