--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -21,7 +21,7 @@
       margin-left: 9px;
       margin-top: 10px;
       width: 100%;
-      .Tab-root-232 {
+      .MuiTab-root {
         font-size: 14px;
         margin-right: 0;
         padding: 6px 14px;
