--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -39,6 +39,14 @@
   .search-list-ul {
     list-style-type: none;
     padding: 0;
+    max-height: 9em;
+  }
+
+  .search-list-ul-scroll {
+    list-style-type: none;
+    padding: 0;
+    overflow-y: auto;
+    max-height: 9em;
   }
 
   .search-list-li {
@@ -46,5 +54,9 @@
   }
   .search-list-li > a {
     text-decoration: none;
+  }
+  .view-more-icon {
+    font-size: 19.22px !important;
+    margin-left: 14px;
   }
 }
