--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -20,14 +20,65 @@
   .MuiFormControl-marginNormal {
     margin-top: 10px;
   }
-  .text-filter {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-bottom: 8px;
-    &:hover {
-      background-color: #ecf3ff;
+  .MuiCardContent-root {
+    padding: 0 !important;
+    .text-filter {
+      padding: 0 16px;
+      margin-block-start: 0;
+      margin-block-end: 0;
+      margin-bottom: 8px;
+      border-left: 5px solid transparent;
+      transition: 0.3s;
+      &:hover {
+        background-color: #ecf3ff;
+        border-left: 5px solid blue;
+      }
+    }
+    label {
+      padding: 0 16px;
+      margin-right: 0;
+      margin-left: 0;
+      border-left: 5px solid transparent;
+      transition: 0.3s;
+      &:hover {
+        background-color: #ecf3ff;
+        border-left: 5px solid blue;
+        transition: all 0.4s ease-out;
+      }
     }
   }
+  .rdt {
+    width: auto;
+    .dtInput-helperText{
+      margin-top: 0;
+      min-height: 0;
+    }
+
+    .dtContainer {
+      padding: 0px 12px;
+      margin-top: 5px;
+
+      label {
+        padding: 0;
+        border-left: 5px solid transparent;
+        &:hover {
+          background-color: #fff;
+          border-left: 5px solid transparent;
+          transition: all 0.4s ease-out;
+        }
+      }
+      .dtInput {
+        width: auto;
+      }
+      
+    }
+    .rdtPicker{
+      width: 100%;
+      position: inherit;
+      border: none;
+    }
+  }
+
   // .Panel-toggleButton-246{
   //   display: none;
   // }
@@ -41,8 +92,12 @@
   // [class^="Panel-toggleButton"] {
   //   display: none;
   // }
+  .accordion-start>div{
+    border-bottom: none;
+  }
   .accordion-start {
-    td a{
+
+    td a {
       text-decoration: none;
     }
     div[class*="MuiExpansionPanelSummary-root"] {
@@ -106,41 +161,41 @@
   .search-icon {
     float: left;
     svg {
-      color: #292929  !important;
+      color: #292929 !important;
       height: 15px;
       margin-left: 3px;
     }
   }
-  .chip{
+  .chip {
     float: left;
     margin-left: 20px;
     margin-top: -2px;
   }
-  .expand-all{
+  .expand-all {
     float: right;
     font-size: 13px;
     margin-right: 20px;
     margin-top: 5px;
-    svg{
+    svg {
       vertical-align: bottom;
       height: 14px;
-      
+      cursor: pointer;
     }
-    span{
+    span {
       // vertical-align: middle;
       font-size: 12px;
       color: blue;
       cursor: pointer;
     }
   }
-  .sort-by{
+  .sort-by {
     float: right;
     font-size: 12px;
     font-weight: 500;
-    span{
+    span {
       margin-right: 5px;
     }
-    button{
+    button {
       margin-right: 0 !important;
       padding-right: 0;
     }
@@ -403,10 +458,6 @@
   div[class^="Panel-container"] span.MuiTypography-root {
     margin-left: 10px;
     font-size: 15px;
-  }
-
-  .MuiCardContent-root {
-    padding: 0 16px !important;
   }
 
   div[class*="MuiFormGroup-root"]
