--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -8,7 +8,7 @@
     width: 100%;
     margin-top: 10px;
   }
-  .searchPanel>div>button{
+  .searchPanel > div > button {
     display: none;
   }
 
@@ -52,7 +52,7 @@
   }
   .rdt {
     width: auto;
-    .dtInput-helperText{
+    .dtInput-helperText {
       margin-top: 0;
       min-height: 0;
     }
@@ -73,9 +73,8 @@
       .dtInput {
         width: auto;
       }
-      
     }
-    .rdtPicker{
+    .rdtPicker {
       width: 100%;
       position: inherit;
       border: none;
@@ -96,14 +95,19 @@
   // [class^="Panel-toggleButton"] {
   //   display: none;
   // }
-  .accordion-start>div{
+  .accordion-start > div {
     border-bottom: none;
   }
   .accordion-start {
-
-    td a {
-      text-decoration: none;
-      word-break: break-word;
+    td {
+      a {
+        text-decoration: none;
+        word-break: break-word;
+        color: #333;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
     div[class*="MuiExpansionPanelSummary-root"] {
       margin-left: 24px;
@@ -176,7 +180,7 @@
     margin-left: 20px;
     margin-top: -2px;
   }
-  .grid-item{
+  .grid-item {
     margin-top: 3px;
     margin-bottom: 3px;
     font-size: 14px;
