--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -29,7 +29,7 @@
         min-height: 10px;
         opacity: 0.5;
       }
-      .MuiTab-textColorInherit.Mui-selected{
+      .MuiTab-textColorInherit.Mui-selected {
         opacity: 1;
       }
       .MuiTabs-indicator {
@@ -90,7 +90,7 @@
         // padding: 10px 20px;
         // border: 1px solid #c3c3c3;
         margin-left: 10px;
-        .chart-title{
+        .chart-title {
           font-size: 14px;
           font-weight: 500;
         }
@@ -111,15 +111,17 @@
   .normal {
     font-weight: normal;
   }
-  
+
   .thick {
     font-weight: bold;
   }
 
-  .heading1, .heading2, .heading3 {
+  .heading1,
+  .heading2,
+  .heading3 {
     margin-bottom: 5px;
   }
-  
+
   .indent {
     margin-left: 10px;
   }
@@ -128,22 +130,22 @@
     margin-bottom: 0;
     margin-top: 5px;
   }
-  
+
   .thicker {
     font-weight: 900;
   }
 
   .dropdown-wrapper {
-    position: relative;
+    // position: relative;
     width: 100%;
-    border: 1px solid rgba(0,0,0,.15);
-    border-radius: .25rem;
+    // border: 1px solid rgba(0, 0, 0, 0.15);
+    // border-radius: 0.25rem;
   }
 
   .dropdown-item {
     display: block;
     width: 100%;
-    padding: .25rem 1.5rem;
+    padding: 0.25rem 1.5rem;
     clear: both;
     font-weight: 400;
     color: #212529;
@@ -160,28 +162,83 @@
     z-index: 1000;
     display: none;
     float: left;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
+    min-width: 14rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
     font-size: 1rem;
     color: #212529;
     text-align: left;
     list-style: none;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
-    border-radius: .25rem;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
   }
 
   .sample {
     position: absolute;
     transform: translate3d(185px, 0px, 0px);
-    top: 0px;
-    left: 0px;
+    top: -3px;
+    left: 7%;
     will-change: transform;
   }
 
   .show-nav {
     display: block;
+  }
+
+  .btn {
+    width: 100%;
+    /* height: 27px; */
+    padding: 10px;
+    border: none;
+    color: black;
+    // padding: 16px 32px;
+    // margin-left: 5px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    // margin: 4px 2px;
+    transition-duration: 0.2s;
+    cursor: pointer;
+    background: none;
+  }
+
+  // .btn1 {
+  //   background-color:rgba(0,255,0,0.2);
+  //   color: black;
+  //   border-left: 8px solid #4CAF50;
+  // }
+
+  .btn1:hover, .btn1:active {
+    border-left: 8px solid #4c93af;
+    background-color: rgba(0, 140, 255, 0.2);
+  }
+
+  .index-column {
+    flex: 1 1;
+    height: max-content;
+  }
+  .protocol-column {
+    flex: 3 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+  }
+
+  .view-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+  }
+
+  .bar {
+    height: 30px;
+    margin-top: 5%;
+    margin-bottom: 4%;
+    float: left;
+    width: 100%;
+    background-color: lightgrey;
   }
 }
