--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,14 @@
-@import './assets/styles/counter.scss';
-@import './assets/styles/dashboard.scss';
-@import './assets/styles/addprotocol.scss';
+@import "./assets/styles/counter.scss";
+@import "./assets/styles/dashboard.scss";
+@import "./assets/styles/addprotocol.scss";
 .App {
   text-align: center;
+
+}
+.main-error-message {
+  position: absolute;
+  display: inline-block;
+  color: #ff0000;
 }
 
 .App-logo {
@@ -34,9 +40,9 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px)
+    transform: translateY(10px);
   }
   100% {
-    transform: translateY(0px)
+    transform: translateY(0px);
   }
 }
