--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -18,6 +18,14 @@
       font-size: 14px;
     }
   }
+  .compare-button {
+    width: 100%;
+    button {
+      float: left;
+      margin-top: 25px;
+      margin-left: 10px;
+    }
+  }
   .summary-button {
     width: 100%;
     button {
@@ -56,27 +64,50 @@
         ul {
           list-style-type: none;
           padding-inline-start: 15px;
-          li{
+          li {
             margin-bottom: 10px;
             font-size: 13px;
             cursor: pointer;
+            color: #797979;
           }
         }
       }
-      .view-changes{
-          margin-top: 10px;
-          margin-left: 10px;
-          svg{
-            font-size: 14px;
-            margin-right: 5px;
-            vertical-align: middle;
-          }
-          a{
-              color: blue;
-              font-size: 13px;
-              cursor: pointer;
-          }
+      .view-changes {
+        margin-top: 10px;
+        margin-left: 10px;
+        svg {
+          font-size: 14px;
+          margin-right: 5px;
+          vertical-align: middle;
+        }
+        a {
+          color: blue;
+          font-size: 13px;
+          cursor: pointer;
+        }
       }
+    }
+  }
+  .compare-card {
+    margin-top: 15px;
+    .header-section {
+      font-weight: 600;
+      padding: 15px 25px;
+    }
+    .TOC-title {
+      float: left;
+      width: 100%;
+      height: 20px;
+      margin-bottom: 10px;
+      background-color: #efefef;
+      font-size: 12px;
+      display: flex;
+      align-items: center;
+      padding-left: 10px;
+    }
+    .content-detail {
+      padding: 10px 16px;
+      font-size: 13px;
     }
   }
 }
