Unit test case and Associate Documents Code

--- a/src/features/Container/Protocols/Documents.scss
+++ b/src/features/Container/Protocols/Documents.scss
@@ -15,5 +15,13 @@
     [class^="InternalTablePagination-toolbar-"] {
       display: none;
     }
+    .hyperlink{
+      &:active{
+        color: -webkit-activelink;
+      }
+      color: -webkit-link;
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 }
