Compare with mock json

--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -108,6 +108,7 @@
     .content-detail {
       padding: 10px 16px;
       font-size: 13px;
+      border-bottom: 1px solid #efefef;
     }
   }
 }
