--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -111,4 +111,12 @@
       border-bottom: 1px solid #efefef;
     }
   }
+  .h-red{
+    background-color: rgba(255, 0, 21, 0.39);
+    width: fit-content;
+  }
+  .h-yellow{
+    background-color: rgba(238, 255, 0, 0.39);
+    width: fit-content;
+  }
 }
