--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -144,7 +144,7 @@
 
   .dropdown-item {
     display: block;
-    width: 100%;
+    width: auto;
     padding: 0.25rem 1.5rem;
     clear: both;
     font-weight: 400;
@@ -160,10 +160,10 @@
     top: 100%;
     left: 0;
     z-index: 1000;
-    display: none;
+    display: block;
     float: left;
     min-width: 14rem;
-    padding: 0.5rem 0;
+    // padding: 0.5rem 0;
     margin: 0.125rem 0 0;
     font-size: 1rem;
     color: #212529;
