sortby and Expand functionality in search page

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -188,6 +188,9 @@
     text-overflow: ellipsis;
     /* width: 100px; */
     overflow: hidden;
+    &.bold-class{
+      font-weight: bold;
+    }
   }
   .expand-all {
     float: right;
