compare API integration

--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -111,12 +111,23 @@
       border-bottom: 1px solid #efefef;
     }
   }
-  .h-red{
+  .h-red {
     background-color: rgba(255, 0, 21, 0.39);
     width: fit-content;
   }
-  .h-yellow{
+  .h-yellow {
     background-color: rgba(238, 255, 0, 0.39);
     width: fit-content;
+  }
+  .single-version {
+    height: 50vh;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+      text-align: center;
+      font-weight: 500;
+    }
   }
 }
