--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -237,10 +237,9 @@
   }
 
   .bar {
-    height: 30px;
-    margin-top: 5%;
-    margin-bottom: 4%;
-    float: left;
+    padding: 5px;
+    margin-top: 2%;
+    margin-bottom: 2%;
     width: 100%;
     background-color: lightgrey;
   }
