--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -125,6 +125,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     p {
       text-align: center;
       font-weight: 500;
