View and Download Document for Search

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -106,6 +106,7 @@
         text-decoration: none;
         word-break: break-word;
         color: #333;
+        cursor: pointer;
         &:hover {
           text-decoration: underline;
         }
