--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -128,12 +128,6 @@
     font-weight: bold;
   }
 
-  .heading1,
-  .heading2,
-  .heading3 {
-    margin-bottom: 5px;
-  }
-
   .indent {
     margin-left: 10px;
   }
@@ -152,6 +146,7 @@
     width: 100%;
     // border: 1px solid rgba(0, 0, 0, 0.15);
     // border-radius: 0.25rem;
+    font-size: 14px;
   }
 
   .dropdown-item {
@@ -177,7 +172,7 @@
     min-width: 14rem;
     // padding: 0.5rem 0;
     margin: 0.125rem 0 0;
-    font-size: 1rem;
+    font-size: 14px;
     color: #212529;
     text-align: left;
     list-style: none;
@@ -190,6 +185,8 @@
   }
 
   .sample {
+    max-height: 200px;
+    overflow-y: auto;
     position: absolute;
     transform: translate3d(185px, 0px, 0px);
     top: -3px;
@@ -212,7 +209,7 @@
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
     // margin: 4px 2px;
     transition-duration: 0.2s;
     cursor: pointer;
@@ -254,5 +251,8 @@
     margin-bottom: 2%;
     width: 100%;
     background-color: lightgrey;
+  }
+  .view-wrapper .MuiCard-root {
+    padding: 0;
   }
 }
