section css changes

--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -252,6 +252,13 @@
     width: 100%;
     background-color: lightgrey;
   }
+  .bar2 {
+    padding: 5px;
+    margin-top: 30px;
+    margin-bottom: 2%;
+    width: 100%;
+    background-color: rgb(211 211 211 / 50%);
+  }
   .view-wrapper .MuiCard-root {
     padding: 0;
   }
