--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -390,6 +390,7 @@
     color: #0557d5 !important;
     font-size: 16px;
     font-weight: 600;
+    cursor: pointer;
 
     strong {
       text-transform: uppercase;
