--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -14,6 +14,13 @@
     overflow: hidden;
     padding: 0;
   }
+
+  .long-text {
+    max-width: 100px;
+ overflow: hidden;
+ text-overflow: ellipsis;
+ white-space: nowrap;
+  }
   // [class^="MuiTableRow-root-"] {
   //   background-color: #f6f7fb;
   // }
