--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -24,7 +24,7 @@
   // margin-top: 70px;
   padding-left: 20px;
   max-width: 1140px;
-  margin: 70px auto;
+  margin: 70px auto 10px;
   h1,
   h2,
   h3,
