--- a/src/features/Components/CustomDropdown/CustomDropdown.scss
+++ b/src/features/Components/CustomDropdown/CustomDropdown.scss
@@ -19,7 +19,7 @@
           float: right;
           color:#0768fd;
           padding-right: 8px;
-          cursor: default;
+          cursor: pointer;;
       }
       .noresult-para{
           clear: both;
