--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -101,7 +101,7 @@
     border-bottom: none;
   }
   .accordion-start {
-    .grid-key-value{
+    .grid-key-value {
       margin-right: 20px;
     }
     td {
@@ -156,9 +156,16 @@
   }
 
   .refine-search {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-size: 14px;
-    margin-bottom: 16px;
-    font-weight: bold;
+    margin-bottom: 5px;
+
+    span {
+      font-size: 13px;
+      padding-top: 5px;
+    }
 
     a {
       font-size: 13px;
@@ -194,7 +201,7 @@
     text-overflow: ellipsis;
     /* width: 100px; */
     overflow: hidden;
-    &.bold-class{
+    &.bold-class {
       font-weight: bold;
     }
   }
