--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -576,3 +576,12 @@
     width: 100%;
   }
 }
+.errorMessage-dateRange {
+  padding: 5px 25px;
+  color: red;
+  margin-top: 20px;
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
