--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -65,12 +65,17 @@
   // Empty Spaces when rows are less in table-- starts
   [class^="MuiTableBody-root-"] {
     [class^="MuiTableRow-root-"] {
-      height: 16px !important;
+      // height: 14px !important;
+       height: 0px !important;
+
       [class^="MuiTableCell-root-"]:nth-child(-n + 2) {
-        padding-top: 4px;
+        // padding-top: 2px;
+        // try belwo and comment about padding top
+          padding-bottom: 2px;
       }
       [class^="MuiTableCell-root-"]:nth-child(n + 2) {
         padding-top: 8px;
+        padding-bottom: 6px;
       }
     }
   }
