--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -270,6 +270,14 @@
     width: 100%;
     background-color: rgb(211 211 211 / 50%);
   }
+
+  .bar3 {
+    padding: 5px;
+    margin-top: 30px;
+    margin-bottom: 2%;
+    width: 100%;
+    background-color: rgb(211 211 211 / 30%);
+  }
   .view-wrapper .MuiCard-root {
     padding: 0;
   }
