--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -18,6 +18,34 @@
     table tbody tr th:first-child {
       display: none;
     }
+    h1 {
+      padding: 5px;
+      margin-top: 50px;
+      margin-bottom: 2%;
+      width: 100%;
+      background-color: lightgrey;
+      font-size: 16px;
+    }
+    h2 {
+      padding: 5px;
+      margin-top: 30px;
+      margin-bottom: 2%;
+      width: 100%;
+      background-color: rgb(211 211 211 / 50%);
+      font-size: 14px;
+    }
+
+    h3,
+    h4,
+    h5,
+    h6 {
+      padding: 5px;
+      margin-top: 30px;
+      margin-bottom: 2%;
+      width: 100%;
+      background-color: rgb(211 211 211 / 30%);
+      font-size: 14px;
+    }
   }
 
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
@@ -260,28 +288,6 @@
     display: flex;
   }
 
-  .bar {
-    padding: 5px;
-    margin-top: 50px;
-    margin-bottom: 2%;
-    width: 100%;
-    background-color: lightgrey;
-  }
-  .bar2 {
-    padding: 5px;
-    margin-top: 30px;
-    margin-bottom: 2%;
-    width: 100%;
-    background-color: rgb(211 211 211 / 50%);
-  }
-
-  .bar3 {
-    padding: 5px;
-    margin-top: 30px;
-    margin-bottom: 2%;
-    width: 100%;
-    background-color: rgb(211 211 211 / 30%);
-  }
   .view-wrapper .MuiCard-root {
     padding: 0;
   }
