search integration with micro service and follow/unfollow API integration

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -415,9 +415,9 @@
     font-weight: 600;
     cursor: pointer;
 
-    strong {
-      text-transform: uppercase;
-    }
+   // strong {
+      // text-transform: uppercase;
+    // }
   }
 
   .width200px {
