--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -7,11 +7,11 @@
   table thead tr th {
     white-space: nowrap;
   }
-  
+
   a:-webkit-any-link {
     text-decoration: none;
   }
-  [class^="MuiTableCell-root-"]:last-child {
+  [class^="MuiTableCell-root"]:last-child {
     max-width: 60px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -30,13 +30,14 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  .long-text, .long-text2 {
+  .long-text,
+  .long-text2 {
     max-width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  .long-text2{
+  .long-text2 {
     max-width: 400px;
   }
   // [class^="MuiTableRow-root-"] {
@@ -70,12 +71,12 @@
   [class^="MuiTableBody-root-"] {
     [class^="MuiTableRow-root-"] {
       // height: 14px !important;
-       height: 0px !important;
+      height: 0px !important;
 
       [class^="MuiTableCell-root-"]:nth-child(-n + 2) {
         // padding-top: 2px;
         // try belwo and comment about padding top
-          padding-bottom: 2px;
+        padding-bottom: 2px;
       }
       [class^="MuiTableCell-root-"]:nth-child(n + 2) {
         padding-top: 8px;
@@ -83,11 +84,11 @@
       }
     }
   }
-  .empty-protocol-table{
-    [class^="MuiTable-root-"]{
-      tbody{
-        tr{
-          td{
+  .empty-protocol-table {
+    [class^="MuiTable-root-"] {
+      tbody {
+        tr {
+          td {
             height: 200px !important;
           }
         }
