--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -177,7 +177,11 @@
     justify-content: space-between;
     font-size: 14px;
     margin-bottom: 5px;
-
+    button{
+      span{
+        padding-top: 0px;
+      }
+    }
     span {
       font-size: 13px;
       padding-top: 5px;
