Initial Phase Value from ES

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -588,7 +588,7 @@
 .virtualization-set {
   .list {
     padding: 10px;
-    height: 350px;
+    max-height: 350px;
     width: 271px;
   }
   .list > div > div {
